--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Ylävalikko -->
     <header>
         <div class="navbar">
-            <a href="#"><img src="hyperkani_logo.png" alt="Hyperkani Logo" class="logo"></a>
+            <a href="#"><img src="hyperkani_logo2.png" alt="Hyperkani Logo" class="logo"></a>
             <nav>
                 <ul>
                     <li><a href="#games">Our Games</a></li>
@@ -25,7 +25,28 @@
     <!-- Pääbanneri -->
     <section class="banner">
         <div class="container">
-            <h1></h1>
+            <h1>HYPERKANI</h1>
+        </div>
+    </section>
+
+    <!-- Uusi osio -->
+    <section class="new-section">
+        <div class="container">
+            <h1>IMAGE 1</h1>
+        </div>
+    </section>
+
+        <!-- Uusi osio -->
+    <section class="new-section2">
+        <div class="container">
+            <h1>IMAGE 2</h1>
+        </div>
+    </section>
+
+            <!-- Uusi osio -->
+    <section class="new-section3">
+        <div class="container">
+            <h1>IMAGE 3</h1>
         </div>
     </section>
 
