--- a/index.html
+++ b/index.html
@@ -25,58 +25,24 @@
     <!-- Pääbanneri -->
     <section class="banner">
         <div class="container">
-            <h1>HYPERKANI</h1>
+            <h1></h1>
         </div>
+        <img src="hyperkani_logo2.png" alt="Hyperkani Logo" class="banner-logo">
+        <p class="banner-text">Hyper games for hyper people.</p>
     </section>
 
-    <!-- Uusi osio -->
-    <section class="new-section">
+    <!-- Placeholder -->
+    <section class="placeholder">
         <div class="container">
-            <h1>IMAGE 1</h1>
-        </div>
-    </section>
-
-        <!-- Uusi osio -->
-    <section class="new-section2">
-        <div class="container">
-            <h1>IMAGE 2</h1>
-        </div>
-    </section>
-
-            <!-- Uusi osio -->
-    <section class="new-section3">
-        <div class="container">
-            <h1>IMAGE 3</h1>
-        </div>
-    </section>
-
-    <!-- Pelit -->
-    <section id="games" class="games">
-        <div class="container">
-            <h2>Our Games</h2>
-            <div class="game">
-                <img src="game1.jpg" alt="Peli 1">
-                <h3>Peli 1</h3>
-                <p>Lyhyt kuvaus pelistä 1.</p>
-                <a href="#">Lue lisää</a>
-            </div>
-            <div class="game">
-                <img src="game2.jpg" alt="Peli 2">
-                <h3>Peli 2</h3>
-                <p>Lyhyt kuvaus pelistä 2.</p>
-                <a href="#">Lue lisää</a>
-            </div>
-            <div class="game">
-                <img src="game3.jpg" alt="Peli 3">
-                <h3>Peli 3</h3>
-                <p>Lyhyt kuvaus pelistä 3.</p>
-                <a href="#">Lue lisää</a>
-            </div>
+            <h2></h2>
         </div>
     </section>
 
     <!-- Footer -->
     <footer>
+        <div class="footer-logo">
+            <img src="hyperkani_logo2.png" alt="Hyperkani Logo">
+        </div>
         <p>&copy; 2025 Hyperkani. Kaikki oikeudet pidätetään.</p>
         <div class="social-media">
             <a href="#">Facebook</a>
