Fix: logo, navbar

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Footer -->
     <footer>
         <div class="footer-logo">
-            <img src="hyperkani_logo2.png" alt="Hyperkani Logo">
+            <img src="hyperkani_logo.png" alt="Hyperkani Logo">
         </div>
         <p>&copy; 2025 Hyperkani. Kaikki oikeudet pidätetään.</p>
         <div class="social-media">
