--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Ylävalikko -->
     <header>
         <div class="navbar">
-            <a href="#"><img src="hyperkani_logo2.png" alt="Hyperkani Logo" class="logo"></a>
+            <a href="#"><img src="hyperkani_logo.png" alt="Hyperkani Logo" class="logo"></a>
             <nav>
                 <ul>
                     <li><a href="#games">Our Games</a></li>
@@ -27,7 +27,7 @@
         <div class="container">
             <h1></h1>
         </div>
-        <img src="hyperkani_logo2.png" alt="Hyperkani Logo" class="banner-logo">
+        <img src="hyperkani_logo.png" alt="Hyperkani Logo" class="banner-logo">
         <p class="banner-text">Hyper games for hyper people.</p>
     </section>
 
@@ -41,7 +41,7 @@
     <!-- Footer -->
     <footer>
         <div class="footer-logo">
-            <img src="hyperkani_logo.png" alt="Hyperkani Logo">
+            <img src="hyperkani_logo2.png" alt="Hyperkani Logo">
         </div>
         <p>&copy; 2025 Hyperkani. Kaikki oikeudet pidätetään.</p>
         <div class="social-media">
