--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Ylävalikko -->
     <header>
         <div class="navbar">
-            <a href="#"><img src="hyperkani_logo.png" alt="Hyperkani Logo" class="logo"></a>
+            <a href="#"><img src="hyperkani_logo2.png" alt="Hyperkani Logo" class="logo"></a>
             <nav>
                 <ul>
                     <li><a href="#games">Our Games</a></li>
