--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </div>
         <img src="hyperkani_logo.png" alt="Hyperkani Logo" class="banner-logo">
         <p class="banner-text">Hyper games for hyper people.</p>
+        <div class="down-arrow"></div> <!-- Added down arrow -->
     </section>
 
     <!-- Placeholder -->
