--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
         </div>
         <img src="hyperkani_logo.png" alt="Hyperkani Logo" class="banner-logo">
         <p class="banner-text">Hyper games for hyper people.</p>
-        <div class="down-arrow"></div> <!-- Added down arrow -->
+        <div class="down-arrow"></div>
+        <img src="pose_gamer.png" alt="Pose Cheer" class="banner-pose-left">
+        <img src="pose_cheer.png" alt="Pose Gamer" class="banner-pose-right">
     </section>
 
-    <!-- Placeholder -->
-    <section class="placeholder">
-        <div class="container">
-            <h2>Placeholder test.</h2>
-        </div>
+    <!-- Full-width image below the banner -->
+    <section class="full-width-image">
+        <img src="bomber_arena.png" alt="Bomber Arena">
+        <img src="bomber_logo.png" alt="Bomber Logo" class="bomber-logo">
     </section>
 
     <!-- Footer -->
