Add: more games

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
         <img src="bomber_logo.png" alt="Bomber Logo" class="bomber-logo">
     </section>
 
+    <!-- Two images side by side -->
+    <section class="stunt-car-images">
+        <img src="stunt_car.png" alt="Stunt Car" class="stunt-car">
+        <img src="stunt_car.png" alt="Stunt Car" class="stunt-car">
+    </section>
+
     <!-- Footer -->
     <footer>
         <div class="footer-logo">
