--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <!-- Ylävalikko -->
+    <!-- Navbar -->
     <header>
         <div class="navbar">
             <a href="#"><img src="hyperkani_logo2.png" alt="Hyperkani Logo" class="logo"></a>
@@ -22,7 +22,7 @@
         </div>
     </header>
 
-    <!-- Pääbanneri -->
+    <!-- Hero -->
     <section class="banner">
         <div class="container">
             <h1></h1>
